fix: readjust spacing

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -4970,9 +4970,6 @@ details.collapse summary::-webkit-details-marker {
 .min-w-\[250px\] {
   min-width: 250px;
 }
-.min-w-\[261px\] {
-  min-width: 261px;
-}
 .min-w-\[35vw\] {
   min-width: 35vw;
 }
